fix nested folder import bug with firefox by disabling whitespace skipping (bug 243510)